# Sheep

./: CNAME  README.md  index.html  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: main.yml  python-app.yml
config/: config.ini  config.yaml
src/: pyproject.toml  setup.py
src/sheep/: baa.py  page.py
tests/v0.0.1/: index.html  main.py
tests/v0.0.2/: index.html  main.py
tests/v0.0.3/: index.html  main.py
tests/v0.0.4/: index.html  main.py
tests/v0.0.5/: index.html  main.py
tests/v0.0.6/: main.py
tests/v0.0.7/: main.py
tests/v0.0.8/: index.html  main.py
