[project]
name = "sheep"
version = "0.0.8"
authors = [
  { name="AtlasL", email="vtlvs.0@gmail.com" },
]
description = "Website building in Python with Sheep."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/AtlasL1/Sheep"
Issues = "https://github.com/AtlasL1/Sheep/issues"
Discord = "https://discord.gg/TkT5BPkZJG"
